# vosk-api

./: .gitignore
nodejs/: CMakeLists.txt  binding.gyp  index.js  main.js  package-lock.json  package.json
nodejs/examples/: test_simple.js
nodejs/src/: binding.cc  index.cc  index.cpp  kaldi_recognizer_wrap.cc  kaldi_recognizer_wrap.h  main.cpp  model-wrap.cc  model-wrap.h  model_wrap.cc  model_wrap.h
nodejs/types/: index.d.ts
